fix contrast of titles

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,5 +1,5 @@
 // PALLETE
-$illusion: #f2adca;
+$illusion: #e45b98;
 $wewak: #ef9fc3;
 $kobi: #f0b4d0;
 $dairy-cream: #fae6c2;
